--- a/website/src/pages/docs/migration/migration-from-apollo-server.mdx
+++ b/website/src/pages/docs/migration/migration-from-apollo-server.mdx
@@ -1,52 +1,54 @@
-import { PackageCmd, Callout } from '@theguild/components'
+import { PackageCmd } from '@theguild/components'
 
 # Migration from Apollo Server
 
 ## Installation
 
-You can start by installing `graphql-yoga` package.
+You can start with installing `graphql-yoga` package.
 
-<PackageCmd packages={['@graphql-yoga/node']} />
+<PackageCmd packages={['graphql-yoga']} />
 
-### Install Equivalent Envelop Plugins of the Apollo Server
+### Install equivalent **Envelop** plugins of the Apollo Server
 
-Some features that are included within apollo-server by default must be installed as envelop plugins. Learn more about envelop plugins [here](/docs/features/envelop-plugins).
+Some features that are included within apollo-server by default must be installed as envelop plugins ([Learn more about envelop plugins here](/docs/features/envelop-plugins)).
 
 - Apollo Federation
-  - If you are using Apollo Federation, install [`@envelop/use-apollo-federation`](https://envelop.dev/plugins/use-apollo-federation)
+  - If you are using Apollo Federation, [install `@envelop/use-apollo-federation`](https://www.envelop.dev/plugins/use-apollo-federation)
 - Apollo Server Errors
-  - If you are using Apollo Server errors, install [`@envelop/use-apollo-server-errors`](https://envelop.dev/plugins/use-apollo-server-errors)
+  - If you are using Apollo Server errors, [install `@envelop/use-apollo-server-errors`](https://www.envelop.dev/plugins/use-apollo-server-errors)
 - Apollo Tracing
-  - If you are using Apollo Tracing, install [`@envelop/use-apollo-tracing`](https://envelop.dev/plugins/use-apollo-tracing)
+  - If you are using Apollo Tracing, [install `@envelop/use-apollo-tracing`](https://www.envelop.dev/plugins/use-apollo-tracing)
 - Response Cache
-  - If you are using Response Cache, you should set up [`@envelop/use-response-cache`](https://envelop.dev/plugins/use-response-cache) for the same functionality
+  - If you are using Response Cache, [you should set up `@envelop/use-response-cache`](https://www.envelop.dev/plugins/use-response-cache) for the same functionality
 
-<Callout>
-  Check out [more plugins on Envelop Plugin Hub](https://envelop.dev/plugins).
-</Callout>
+[Check out more plugins on Envelop Plugin Hub](https://www.envelop.dev/plugins)
 
-## Example Initial Usage of GraphQL Yoga
+## Example initial usage of GraphQL Yoga
 
-For example, if you are using Apollo Server Errors:
+For example if you are using Apollo Server Errors;
 
-```diff filename="apollo-server-errors-example.ts"
+`apollo-server-errors-example.ts`
+
+```diff
 import { schema } from './schema'
 - import { ApolloServer } from 'apollo-server'
-+ import { createServer } from '@graphql-yoga/node'
++ import { createYoga } from 'graphql-yoga'
 + import { useApolloServerErrors } from '@envelop/apollo-server-errors'
 
 - const server = new ApolloServer({
-+ const server = createServer({
++ const yoga = createYoga({
   // You can also pass `typeDefs` and `resolvers` here directly if you previously use `ApolloServer` constructor to build your `GraphQLSchema`
-  // schema: { typeDefs, resolvers },
+  // schema: createSchema({ typeDefs, resolvers }),
   schema,
-+  plugins: [useApolloServerErrors()]
++  plugins: [useApolloServerErrors()],
 })
 
-server.start()
++ const server = createServer(yoga)
+
+server.listen(4000)
 ```
 
-## Migration from Standalone `apollo-server`
+## Migration from standalone `apollo-server`
 
 You don't need anything special. You can just use GraphQL Yoga as in the example above.
 
@@ -54,9 +56,79 @@ You don't need anything special. You can just use GraphQL Yoga as in the example
 
 Check the integration section to choose the server framework you are using with Apollo Server.
 
-For example, if you are using **Express**, you should remove `server.start(){:ts}` from the code above and replace `server.applyMiddleware({ app }){:ts}` with the route as in [Express Integration section](/docs/integrations/integration-with-express):
+For example, if you are using **Express**, you should remove the standalone HTTP server part(`createServer(yoga)` & `server.listen(4000)`) from the code above and replace `server.applyMiddleware({ app })` with the route as in [Express Integration section](/docs/integrations/integration-with-express)
 
 ```diff
 - server.applyMiddleware({ app })
-+ app.use('/graphql', server)
++ app.use('/graphql', yoga)
 ```
+
+## Batched Queries/Requests
+
+Batched queries is a practice first supported and made popular by the Apollo ecosystem.
+The idea of batched query operations is to reduce the number of network requests by grouping them together.
+This is achieved by slightly delaying the HTTP request in order to gather all the query operations that are executed shortly after each other.
+
+GraphQL Yoga does not support batched queries for the following reasons:
+
+**_All batched queries are as slow as the longest running individual query._**
+
+Because the GraphQL server does not start sending a response to the client until all the queries are completed, a slow query will prevent a faster query result to be already processed/shown to the end user.
+
+**_Batched queries can ba achieved by composing multiple GraphQL fragments/operation into a single one._**
+
+Instead of having two operations:
+
+```graphql
+query A {
+  viewer {
+    id
+    name
+  }
+}
+```
+
+```graphql
+query B($postId: ID!) {
+  post(id: $postId) {
+    id
+    title
+  }
+}
+```
+
+These operations can be combined into a single operation:
+
+```graphql
+query AB($postId: ID!) {
+  viewer {
+    id
+    name
+  }
+  post(id: $postId) {
+    id
+    title
+  }
+}
+```
+
+Furthermore, if you want a partial of the GraphQL operation to arrive at the client as soon as possible, you can use the `@defer` directive.
+
+```graphql
+query AB($postId: ID!) {
+  ... on Query @defer(label: "A") {
+    viewer {
+      id
+      name
+    }
+  }
+  ... on Query @defer(label: "A") {
+    post(id: $postId) {
+      id
+      title
+    }
+  }
+}
+```
+
+You can learn more on how to get the best out of this in our ["Unleash the power of Fragments with GraphQL Codegen" article](https://the-guild.dev/blog/unleash-the-power-of-fragments-with-graphql-codegen).
