--- a/website/src/pages/docs/features/cors.mdx
+++ b/website/src/pages/docs/features/cors.mdx
@@ -1,17 +1,15 @@
-# Configuring CORS with Yoga
+# CORS
 
-CORS stands for Cross-Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
+CORS stands for Cross Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
 
-If your API and web apps are deployed to different domains (or subdomains), you'll have to worry about CORS. For example, if your web client is deployed to example.com but your Yoga server is api.example.com. For security reasons, your browser will not allow XHR requests (like the kind that the GraphQL client makes) to a domain other than the one currently in the browser's address bar.
+If your api and web apps are deployed to different domains (or subdomains), you'll have to worry about CORS. For example, if your web client is deployed to example.com but your Yoga server is api.example.com. For security reasons your browser will not allow XHR requests (like the kind that the GraphQL client makes) to a domain other than the one currently in the browser's address bar.
 
 To deal with this you have two options:
 
-1. **Avoid CORS by proxying your requests**
+_1. Avoid CORS by proxying your requests_
+e.g. If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
 
-If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
-
-2. **Configure Yoga to send back CORS headers**
-
+_2. Configure Yoga to send back CORS headers_
 Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
 
 ```ts
@@ -27,12 +25,12 @@ export type CORSOptions =
   | false
 ```
 
-### Example Configuration Using `CORSOptions`
+### Example configuration using CORSOptions
 
 ```ts
-import { createServer } from '@graphql-yoga/common'
+import { createYoga } from 'graphql-yoga'
 
-const yogaApp = createServer({
+const yogaApp = createYoga({
   cors: {
     origin: 'http://localhost:4000',
     credentials: true,
@@ -45,22 +43,22 @@ const yogaApp = createServer({
 
 This will return the following headers:
 
-```text
+```
 Access-Control-Allow-Origin: 'http://localhost:4000'
 Access-Control-Allow-Credentials: true
 Access-Control-Allow-Methods: POST
 Access-Control-Allow-Headers: X-Custom-Header
 ```
 
-### Example Configuration Using Builder Function
+### Example configuration using builder function
 
-You can also pass a function to the cors property, that takes your request and contructs the options
+You can also pass a function to the cors property, that takes your request and constructs the options
 
 ```ts
-import { createServer } from '@graphql-yoga/common'
+import { createYoga } from 'graphql-yoga'
 
-const yogaApp = createServer({
-  cors(request) {
+const yogaApp = createYoga({
+  cors: (request) => {
     const requestOrigin = request.headers.get('origin')
     return {
       origin: requestOrigin,
@@ -78,19 +76,21 @@ This will return the same headers as the previous example, but take the `origin`
 
 By default, GraphQL Yoga will return `Access-Control-Allow-Origin: *` when preflight requests are made.
 
-This means cross-origin requests from browsers work out of the box - however, it may be appropriate to lock to a specific domain before deploying to production.
+This means cross origin requests from browsers work out of the box - however it may be appropriate to lock to a specific domain before deploying to production.
 
 ## Disabling CORS
 
-You can disable CORS on your Yoga server by simply passing `false` as the cors property. For example::
+You can disable CORS on your Yoga server by simply passing `false` as the cors property
+
+**For example:**
 
 ```ts
-import { createServer } from '@graphql-yoga/common'
+import { createYoga } from 'graphql-yoga'
 
-const yogaApp = createServer({
+const yogaApp = createYoga({
   cors: false
   // ...other args
 })
 ```
 
-This will remove all `Access-Control` headers from the response.
+This will remove all Access-Control headers from the response.
