--- a/website/src/pages/docs/features/envelop-plugins.mdx
+++ b/website/src/pages/docs/features/envelop-plugins.mdx
@@ -1,19 +1,19 @@
 # Envelop Plugins
 
-[Envelop](https://envelop.dev) is a lightweight JavaScript (TypeScript) library for customizing the GraphQL execution layer, allowing developers to build, share and compose plugins that enhance the capabilities of your GraphQL server.
-GraphQL Yoga uses Envelop under the hood, so you can easily extend your server's capabilities with [the plugins from Envelop Ecosystem](https://envelop.dev/plugins)
+[Envelop is a lightweight JavaScript (TypeScript) library for customizing the GraphQL execution layer, allowing developers to build, share and compose plugins that enhance the capabilities of your GraphQL server](https://envelop.dev).
+GraphQL Yoga uses [Envelop](https://envelop.dev) under the hood so you can easily extend your server's capabilities with the plugins from [Envelop Ecosystem](https://www.envelop.dev/plugins)
 
 ## Example
 
-The following example adds [GraphQL JIT](https://github.com/zalando-incubator/graphql-jit) to our GraphQL Server using [Envelop GraphQL JIT Plugin](https://envelop.dev/plugins/use-graphql-jit):
+The following example adds [GraphQL JIT](https://github.com/zalando-incubator/graphql-jit) to our GraphQL Server using [Envelop GraphQL JIT Plugin](https://www.envelop.dev/plugins/use-graphql-jit)
 
 ```ts
 import { useGraphQlJit } from '@envelop/graphql-jit'
-import { createServer } from '@graphql-yoga/node'
+import { createYoga, createSchema } from 'graphql-yoga'
 
 // Provide your schema
-const server = createServer({
-  schema: {
+const yoga = createYoga({
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         greetings: String!
@@ -24,10 +24,13 @@ const server = createServer({
         greetings: () => 'Hello World!'
       }
     }
-  },
+  }),
   plugins: [useGraphQlJit()]
 })
 
 // Start the server and explore http://localhost:4000/graphql
-server.start()
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
