--- a/website/src/pages/docs/features/error-masking.mdx
+++ b/website/src/pages/docs/features/error-masking.mdx
@@ -1,22 +1,24 @@
 # Error Masking
 
-Yoga uses [the Envelop `useMaskedErrors`](https://envelop.dev/plugins/use-masked-errors) for automatically masking unexpected errors and preventing sensitive information from leaking to clients.
+Yoga automatically masks unexpected errors and prevents leaking sensitive information to clients.
 
-Such errors could be caused by failing to establish connections to remote services such as databases or HTTP APIs.
+Unexpected errors can be caused by failed connections to remote services such as databases or HTTP APIs.
 Nobody external needs to know that your database server is not reachable.
-Exposing such information to the outside world can make you vulnerable to targeted attacks.
+Exposing such information to the outside world can make you vulnerable for targeted attacks.
 
-## Getting Started
+In order to build secure applications, it is crucial to understand this concept.
 
-Lets setup a simple schema that calls a remote service that is unavailable.
+## Getting started
 
-```ts
-import { createServer } from '@graphql-yoga/node'
+Let's setup a simple schema that calls a remote service that is unavailable.
+
+```ts filename="Error Masking Example"
+import { createYoga, createSchema } from 'graphql-yoga'
 import { fetch } from '@whatwg-node/fetch'
 
 // Provide your schema
-const server = createServer({
-  schema: {
+const yoga = createYoga({
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         greeting: String!
@@ -24,34 +26,35 @@ const server = createServer({
     `,
     resolvers: {
       Query: {
-        async greeting() {
+        greeting: async () => {
           // This service does not exist
-          const response = await fetch('http://localhost:9876/greeting')
-          const greeting = await response.text()
+          const greeting = await fetch('http://localhost:9876/greeting').then(
+            (res) => res.text()
+          )
+
           return greeting
         }
       }
     }
-  }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
-server.start()
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 Executing the following operation results in an execution result that does not include any detail from the error raised by the fetch call.
 
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
 ```
 
-**Execution Result with Leaking Error Message**
-
-```json
+```json filename="Execution Result with leaking error message"
 {
   "errors": [
     {
@@ -71,57 +74,28 @@ query {
 
 As you can see Yoga comes with sensible defaults as error masking is enabled without you needing to configure anything.
 
-## Receive Original Error in Development
+## Receive original error in development
 
 When developing locally seeing the original error within your Chrome Dev Tools might be handy for debugging.
-You might be tempted to disable the masked errors via the `maskedErrors` config option, however, **we do not recommend that at all!**.
-Having development and production behavior as close as possible is very important for not having any surprises in production.
+You might be tempted to disable the masked errors via the `maskedErrors` config option, however, **we do not recommend that at all**.
 
+Having development and production behavior as close as possible is very important for not having any surprises in production.
 Instead, we recommend enabling the Yoga development mode.
 
-To do this you need to start Yoga with the `NODE_ENV` environment variable set to `development`.
+To do this you need to start Yoga with the `NODE_ENV` environment variable set to `"development"`.
 
-On UNIX and Windows systems the environment variable can be set when starting the server.
+On unix and windows systems the environment variable can be set when starting the server.
 
-```bash
-# Unix (Linux/MacOS)
+```bash filename="Linux/MacOS"
 NODE_ENV=development node server.js
-# Windows
+```
+
+```bash filename="Windows"
 set NODE_ENV=development
 node server.js
 ```
 
-```ts
-import { createServer } from '@graphql-yoga/node'
-import { fetch } from '@whatwg-node/fetch'
-
-// Provide your schema
-const server = createServer({
-  schema: {
-    typeDefs: /* GraphQL */ `
-      type Query {
-        greeting: String!
-      }
-    `,
-    resolvers: {
-      Query: {
-        async greeting() {
-          // This service does not exist
-          const response = await fetch('http://localhost:9876/greeting')
-          const greeting = await response.text()
-          return greeting
-        }
-      }
-    }
-  }
-})
-
-server.start()
-```
-
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
@@ -129,9 +103,7 @@ query {
 
 This will add a more detailed error with a proper stacktrace to the errors extensions.
 
-**GraphQL Error Response with Original Error Extensions**
-
-```json
+```json filename="GraphQL Error Response with original error extensions"
 {
   "errors": [
     {
@@ -155,15 +127,16 @@ This will add a more detailed error with a proper stacktrace to the errors exten
 }
 ```
 
-## Exposing Expected Errors
+## Exposing expected errors
 
-Sometimes it is feasible to throw errors within your GraphQL resolvers whose message should be sent to clients instead of being masked.
-This can be achieved by throwing a `GraphQLYogaError` instead of a "normal" [`Error`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error).
+Sometimes it is feasible to throw errors within your GraphQL resolvers whose message should be send to clients instead of being masked.
+This can be achieved by throwing a `GraphQLError` instead of a "normal" [`Error`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error).
 
-For example, you might want to throw an error if a resource cannot be found by an ID.
+E.g. you might want to throw an error if a resource cannot be found by an ID.
 
-```ts
-import { createServer, GraphQLYogaError } from '@graphql-yoga/node'
+```ts filename="Error thrown for non extisting user" {26-28}
+import { createYoga, createSchema } from 'graphql-yoga'
+import { GraphQLError } from 'graphql'
 
 const users = [
   { id: '1', login: 'Laurin' },
@@ -172,8 +145,8 @@ const users = [
 ]
 
 // Provide your schema
-const server = createServer({
-  schema: {
+const yoga = createYoga({
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type User {
         id: ID!
@@ -185,26 +158,27 @@ const server = createServer({
     `,
     resolvers: {
       Query: {
-        async user(_, args) {
+        user: async (_, args) => {
           const user = users.find((user) => user.id === args.byId)
           if (!user) {
-            throw new GraphQLYogaError(`User with id '${args.byId}' not found.`)
+            throw new GraphQLError(`User with id '${args.byId}' not found.`)
           }
 
           return user
         }
       }
     }
-  }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
-server.start()
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
-**Query for Non-Existing User**
-
-```graphql
+```graphql filename="Query for non existing user"
 query {
   user(byId: "6") {
     id
@@ -212,9 +186,7 @@ query {
 }
 ```
 
-**Execution Result with Error Message**
-
-```json
+```json filename="Execution result with error message" {4}
 {
   "errors": [
     {
@@ -232,14 +204,15 @@ query {
 }
 ```
 
-## Error Codes and Other Extensions
+## Error codes and other extensions
 
 Sometimes it is useful to enrich errors with additional information, such as an error code that can be interpreted by the client.
 
-Error extensions can be passed as the second parameter to the `GraphQLYogaError` constructor.
+Error extensions can be passed as the second parameter to the `GraphQLError` constructor.
 
 ```ts
-import { createServer, GraphQLYogaError } from '@graphql-yoga/node'
+import { createSchema, createServer } from 'graphql-yoga'
+import { GraphQLError } from 'graphql'
 
 const users = [
   { id: '1', login: 'Laurin' },
@@ -248,8 +221,8 @@ const users = [
 ]
 
 // Provide your schema
-const server = createServer({
-  schema: {
+const yoga = createYoga({
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type User {
         id: ID!
@@ -261,13 +234,17 @@ const server = createServer({
     `,
     resolvers: {
       Query: {
-        async user(_, args) {
+        user: async (_, args) => {
           const user = users.find((user) => user.id === args.byId)
           if (!user) {
-            throw new GraphQLYogaError(
+            throw new GraphQLError(
               `User with id '${args.byId}' not found.`,
               // error extensions
-              { code: 'USER_NOT_FOUND' }
+              {
+                extensions: {
+                  code: 'USER_NOT_FOUND'
+                }
+              }
             )
           }
 
@@ -275,14 +252,17 @@ const server = createServer({
         }
       }
     }
-  }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
-server.start()
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
-**Query for Non-Existing User**
+**Query for non existing user**
 
 ```graphql
 query {
@@ -292,7 +272,7 @@ query {
 }
 ```
 
-**Execution Result with Error Message**
+**Execution result with error message**
 
 ```json
 {
@@ -317,44 +297,74 @@ query {
 
 The extensions are not only limited to a `code` property. Any JSON serializable value can be passed as extensions.
 
-```ts
-throw new GraphQLYogaError(
+```ts filename="GraphQLError with a variety of extensions" {5-13}
+throw new GraphQLError(
   `User with id '${args.byId}' not found.`,
   // error extensions
   {
-    code: 'USER_NOT_FOUND',
-    userId: args.byId,
-    foo: {
-      some: {
-        complex: ['structure']
+    extensions: {
+      code: 'USER_NOT_FOUND',
+      userId: args.byId,
+      foo: {
+        some: {
+          complex: ['structure']
+        }
       }
     }
   }
 )
 ```
 
-## Disabling Error Masking
+### Modifying HTTP status codes and headers
+
+The `http` `extensions` field, has special handling within GraphQL Yoga.
+It will always be used for determining what status code and additional headers should be sent to a client.
+The field itself will never be included the the response extensions sent to the user.
+
+The default status code of 200 can be overwritten by specifying the `extensions.http.status` field. In case of multiple errors that try to alter the status code, the highest status code will be used.
+E.g. if the first error has a status code of 404 and the second error has a status code of 400, the status code of the first error will be used.
+
+You can add additional HTTP headers by specifying the `extensions.http.status` field. All the headers specified in that map will be sent to the client. In case multiple errors modify the headers the last error raised during the GraphQL execution phase will overwrite the previous ones.
+
+**Note:** Setting the status code and headers is only possible for the initial payload when sending a multipart operation (defer/stream) and only possible when when subscribing to the event source in a subscription operation (the HTTP status of an ongoing request that already sent a status code can not be changed).
+Please use the `extensions.http` with caution.
+
+```ts filename="GraphQL Error with http extensions." {6-11}
+throw new GraphQLError(
+  `User with id '${args.byId}' not found.`,
+  // error extensions
+  {
+      extensions: {
+        http: {
+          status: 400,
+          headers: {
+            'x-custom-header': 'some-value',
+          }
+        },
+      },
+    },
+  },
+)
+```
+
+## Disabling error masking
 
 We highly recommend using error masking.
 However, you can still disable it using the `maskedErrors` config option.
 
-```ts /maskedErrors: false/
-createServer({ maskedErrors: false })
+```ts filename="Disable Error Masking"
+createYoga({ maskedErrors: false })
 ```
 
-Executing the following operation will now result in a leaking error message that exposes information about internal API calls.
+Executing the following operation will now result within a leaking error message that exposes information about internal API calls.
 
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
 ```
 
-**Execution Result with Leaking Error Message**
-
-```json
+```json filename="Execution Result with leaking error message"
 {
   "errors": [
     {
