--- a/website/src/pages/docs/features/file-uploads.mdx
+++ b/website/src/pages/docs/features/file-uploads.mdx
@@ -1,36 +1,32 @@
 # File Uploads
 
-GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec) which allows you to upload files via HTTP and consume the binary data inside GraphQL Resolvers.
+GraphQL Yoga supports the [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec), allowing you to upload files and consume the binary data inside GraphQL Resolvers via HTTP.
 
-In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API.
+In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API. [Check out the MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File)
 
-[Check out MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File).
+You can use any kind of client supports GraphQL Upload specification. [Check out GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client)
 
-You can use any kind of client to support GraphQL Upload specification.
-[Check out here to find GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client).
+## Quick start
 
-## Example
+This guide will show you how to process a file upload in GraphQL Yoga in no time.
+All you need to do is adding a `File` scalar to your schema.
 
-You only need to add a scalar type definition for file uploads in your schema. The name of the scalar doesn't matter.
-Let's use `File` in this example:
-
-```ts filename="file-upload-example.ts"
-import fs from 'node:fs/promises'
-import path from 'node:path'
-import { createServer } from '@graphql-yoga/node'
+```ts filename="file-upload-example.ts" {8, 15, 23-26}
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
 
 // Provide your schema
-const server = createServer({
-  schema: {
+const yoga = createYoga({
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       scalar File
 
       type Query {
         greetings: String!
       }
+
       type Mutation {
         readTextFile(file: File!): String!
-        saveFile(file: File!): Boolean
       }
     `,
     resolvers: {
@@ -38,44 +34,73 @@ const server = createServer({
         greetings: () => 'Hello World!'
       },
       Mutation: {
-        /**
-         * TypeScript type `File` is globally available.
-         * You don't need to install/import anything else
-         * for both `File` GraphQL Scalar and this type
-         */
-        async readTextFile(_, { file }: { file: File }) {
+        readTextFile: async (_, { file }: { file: File }) => {
           const textContent = await file.text()
           return textContent
-        },
-        async saveFile(_, { file }: { file: File }) {
-          try {
-            const fileStream = file.stream()
-            await fs.writeFile(path.join(__dirname, file.name), fileStream)
-            return true
-          } catch {
-            return false
-          }
         }
       }
     }
-  }
+  })
 })
+
 // Start the server and explore http://localhost:4000/graphql
-server.start()
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
-### Test Your GraphQL Server with cURL
+After, starting the server, you can use [Curl](https://curl.se/) for testing your endpoint.
 
-```sh
+```bash filename="Terminal"
 curl localhost:4000/graphql \
   -F operations='{ "query": "mutation ($file: File!) { readTextFile(file: $file) }", "variables": { "file": null } }' \
   -F map='{ "0": ["variables.file"] }' \
   -F 0=@mytext.txt
 ```
 
-### With GraphQL Nexus
+## Disabling Multipart/File Upload Processing
 
-You need to create a scalar type for file upload in your schema:
+If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
+
+```ts
+createYoga({ multipart: false })
+```
+
+## Configuring Multipart Request Processing (only for Node.js)
+
+In Node.js, you can configure the limits of the multipart request processing such as maximum allowed file size, maximum numbers of files, etc.
+
+Fetch API's `Request.formData` method doesn't have any options to configure the limits of Multipart request processing.
+Instead we can configure our Fetch API ponyfill to manage that.
+
+```ts
+import { createFetch } from '@whatwg-node/fetch'
+import { createYoga } from 'graphql-yoga'
+
+createYoga({
+  fetchAPI: createFetch({
+    // We prefer `node-fetch` over `undici` and current unstable Node's implementation
+    useNodeFetch: true,
+    formDataLimits: {
+      // Maximum allowed file size (in bytes)
+      fileSize: 1000000,
+      // Maximum allowed number of files
+      files: 10,
+      // Maximum allowed size of content (operations, variables etc...)
+      fieldSize: 1000000,
+      // Maximum allowed header size for form data
+      headerSize: 1000000
+    }
+  })
+})
+```
+
+## Third Party Integrations
+
+### Usage with GraphQL Nexus
+
+[GraphQL Nexus](https://nexusjs.org/) is a popular library for building GraphQL schemas with TypeScript. It provides a convenient API for defining GraphQL types and resolvers.
 
 ```ts filename="nexus-file-upload-example.ts"
 import {
@@ -86,7 +111,8 @@ import {
   arg,
   nonNull
 } from 'nexus'
-import { createServer } from '@graphql-yoga/node'
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
 
 const FileScalar = scalarType({
   name: 'File',
@@ -103,7 +129,7 @@ const greetings = queryField('greetings', {
 const readTextFile = mutationField('readTextFile', {
   type: 'String',
   args: { file: nonNull(arg({ type: 'File' })) },
-  async resolve(parent, { file }) {
+  resolve: async (parent, { file }, ctx) => {
     const textContent = await file.text()
     return textContent
   }
@@ -113,35 +139,13 @@ const schema = makeSchema({
   types: [FileScalar, greetings, readTextFile]
 })
 
-const server = createServer({ schema: schema })
+const yoga = createYoga({
+  schema: schema
+})
 
 // Start the server and explore http://localhost:4000/graphql
-server.start()
-```
-
-## Disabling Multipart/File Upload Processing
-
-If you want to disable multipart request processing for some reason, you can pass `multipart: false{:ts}` to prevent Yoga from handling multipart requests.
-
-```ts
-createServer({ multipart: false })
-```
-
-## Configuring Multipart Request Processing (only for Node.js)
-
-In Node.js, you can configure the limits of the multipart request processing such as maximum allowed file size, maximum numbers of files, etc.
-
-```ts
-createServer({
-  multipart: {
-    // Maximum allowed file size (in bytes)
-    fileSize: 1000000,
-    // Maximum allowed number of files
-    files: 10,
-    // Maximum allowed size of content (operations, variables etc...)
-    fieldSize: 1000000,
-    // Maximum allowed header size for form data
-    headerSize: 1000000
-  }
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
 })
 ```
