--- a/website/src/pages/docs/integrations/integration-with-deno.mdx
+++ b/website/src/pages/docs/integrations/integration-with-deno.mdx
@@ -1,25 +1,46 @@
-import { Callout } from '@theguild/components'
-
 # Integration with Deno
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
-[Deno](https://deno.land) is a simple, modern and secure runtime for JavaScript and TypeScript that uses V8 and is built in Rust.
-But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects.
+[Deno is a simple, modern and secure runtime for JavaScript and TypeScript that uses V8 and is built in Rust](https://deno.land/).
+We will use `graphql-yoga` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects.
 
 ## Example
 
-```ts filename="deno-example.ts"
-import { serve } from 'https://deno.land/std/http/server.ts'
-import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common'
+Create a `deno-yoga.ts` file:
 
-const graphQLServer = createServer()
+```ts filename="deno-yoga.ts"
+import {
+  createYoga,
+  createSchema
+} from 'https://cdn.skypack.dev/graphql-yoga?dts'
+import { serve } from 'https://deno.land/std@0.157.0/http/server.ts'
 
-serve(graphQLServer, { port: 4000 })
+const yoga = createYoga({
+  schema: createSchema({
+    typeDefs: /* GraphQL */ `
+      type Query {
+        hello: String!
+      }
+    `,
+    resolvers: {
+      Query: {
+        hello: () => 'Hello Deno!'
+      }
+    }
+  })
+})
 
-console.log('Server is running on http://localhost:4000/graphql')
+serve(yoga, {
+  onListen({ hostname, port }) {
+    console.log(`Listening on http://${hostname}:${port}/graphql`)
+  }
+})
 ```
 
-<Callout>
-  You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/deno).
-</Callout>
+And run it:
+
+```bash
+deno run index.ts
+```
+
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/deno)
