--- a/website/src/pages/docs/integrations/integration-with-express.mdx
+++ b/website/src/pages/docs/integrations/integration-with-express.mdx
@@ -1,33 +1,30 @@
-import { PackageCmd, Callout } from '@theguild/components'
+import { PackageCmd } from '@theguild/components'
 
 # Integration with Express
 
-[Express](https://expressjs.com) is the most popular web framework for Node.js. It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
+[Express is the most popular web framework for Node.js.](https://expressjs.com/) It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
 You can easily integrate GraphQL Yoga into your Express application with a few lines of code.
 
 ## Installation
 
-<PackageCmd packages={['@graphql-yoga/node express graphql']} />
+<PackageCmd packages={['express', 'graphql', 'graphql-yoga']} />
 
 ## Example
 
 ```ts
 import express from 'express'
-import { createServer } from '@graphql-yoga/node'
+import { createYoga } from 'graphql-yoga'
 
 const app = express()
 
-const graphQLServer = createServer()
+const yoga = createYoga()
 
 // Bind GraphQL Yoga to `/graphql` endpoint
-app.use('/graphql', graphQLServer)
+app.use('/graphql', yoga)
 
 app.listen(4000, () => {
   console.log('Running a GraphQL API server at http://localhost:4000/graphql')
 })
 ```
 
-<Callout>
-  You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/express).
-</Callout>
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/express)
