--- a/website/src/pages/docs/integrations/integration-with-koa.mdx
+++ b/website/src/pages/docs/integrations/integration-with-koa.mdx
@@ -1,28 +1,28 @@
-import { PackageCmd, Callout } from '@theguild/components'
+import { PackageCmd } from '@theguild/components'
 
 # Integration with Koa
 
-[Koa](https://koajs.com) is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.
-GraphQL Yoga can be integrated easily as a route to the existing Koa application with a few lines of code. [So you can benefit from middlewares written for Koa with GraphQL Yoga.](https://github.com/koajs/koa/wiki)
+[Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.](https://koajs.com)
+GraphQL Yoga can be integrated easily as a route to the existing Koa application with a few lines of code. [So you can benefit middlewares written for Koa with GraphQL Yoga.](https://github.com/koajs/koa/wiki)
 
 ## Installation
 
-<PackageCmd packages={['@graphql-yoga/node koa graphql']} />
+<PackageCmd packages={['koa', 'graphql', 'graphql-yoga']} />
 
 ## Example
 
 ```ts
 import Koa from 'koa'
-import { createServer } from '@graphql-yoga/node'
+import { createYoga } from 'graphql-yoga'
 
 const app = new Koa()
 
-const graphQLServer = createServer<Koa.ParameterizedContext>()
+const yoga = createYoga<Koa.ParameterizedContext>()
 
 // Bind GraphQL Yoga to `/graphql` endpoint
 app.use(async (ctx) => {
   // Second parameter adds Koa's context into GraphQL Context
-  const response = await graphQLServer.handleIncomingMessage(ctx.req, ctx)
+  const response = await yoga.handleNodeRequest(ctx.req, ctx)
 
   // Set status code
   ctx.status = response.status
@@ -41,7 +41,4 @@ app.listen(4000, () => {
 })
 ```
 
-<Callout>
-  You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/koa).
-</Callout>
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/koa)
