--- a/website/src/pages/docs/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nestjs.mdx
@@ -1,10 +1,10 @@
 import { PackageCmd, Callout } from '@theguild/components'
 
-# Integration with Nest
+# Integration with NestJS
 
-[NestJS](https://nestjs.com) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
+[Nest (Nest JS)](https://nestjs.com) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
-GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that supports building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
+GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that support building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
 
 ## Standalone GraphQL API
 
@@ -21,7 +21,7 @@ GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypol
 
 With the following Nest project structure:
 
-```text
+```bash
 - src/
   - cats/
     - cats.graphql
@@ -159,6 +159,8 @@ export class AppModule {}
 ```
 
 More information [on the dedicated example](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/code-first).
+
+---
 
 ## Apollo Federation
 
