--- a/website/src/pages/docs/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nextjs.mdx
@@ -1,4 +1,4 @@
-import { PackageCmd, Callout } from '@theguild/components'
+import { PackageCmd } from '@theguild/components'
 
 # Integration with Next.js
 
@@ -6,13 +6,13 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 ## Installation
 
-<PackageCmd packages={['@graphql-yoga/node graphql']} />
+<PackageCmd packages={['graphql', 'graphql-yoga']} />
 
 ## Example
 
-```ts filename="pages/aрi/graphql.ts"
+```ts filename="pages/api/graphql.ts"
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
-import { createServer } from '@graphql-yoga/node'
+import { createYoga } from 'graphql-yoga'
 import type { NextApiRequest, NextApiResponse } from 'next'
 
 export const config = {
@@ -22,54 +22,13 @@ export const config = {
   }
 }
 
-export default createServer<{
+export default createYoga<{
   req: NextApiRequest
   res: NextApiResponse
-}>()
-```
-
-<Callout>
-  You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/nextjs).
-</Callout>
-
-## NextAuth.js
-
-[NextAuth.js](https://next-auth.js.org/) is a popular solution for doing authentication within a Next.js application.
-
-You can easily type and add the session to the GraphQL context by adjusting your GraphQL router handler to the following.
-
-```ts filename="pages/aрi/graphql.ts"
-import { createServer } from '@graphql-yoga/node'
-import type { NextApiRequest, NextApiResponse } from 'next'
-import type { Session } from 'next-auth'
-import { getSession } from 'next-auth/react'
-
-export const config = {
-  api: {
-    // Disable body parsing (required for file uploads)
-    bodyParser: false
-  }
-}
-
-export default createServer<
-  {
-    req: NextApiRequest
-    res: NextApiResponse
-  },
-  {
-    session: Session
-  }
->({
-  context: async ({ req }) => {
-    return {
-      session: await getSession({ req })
-    }
-  }
+}>({
+  // Needed to be defined explicitly because our endpoint lives at a different path other than `/graphql`
+  graphqlEndpoint: '/api/graphql'
 })
 ```
 
-<Callout>
-  You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/nextjs-auth).
-</Callout>
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/nextjs)
