--- a/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
@@ -1,54 +1,48 @@
-import { PackageCmd, Callout } from '@theguild/components'
+import { PackageCmd } from '@theguild/components'
 
 # Integration with SvelteKit
 
-[SvelteKit](https://kit.svelte.dev) is the fastest way to build svelte apps. It is very simple and lets you build the frontend & backend in a single place.
+[SvelteKit is the fastest way to build svelte apps.](https://kit.svelte.dev) It is very simple, and let you build frontend & backend in a single place.
 
-You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQL & SvelteKit at the same time. [Envelop ecosystem](https://envelop.dev) for example!
+You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQL & SvelteKit at the same time. [Envelop ecosystem](https://www.envelop.dev) for example!
 
 ## Installation
 
 In a SvelteKit project:
 
-<PackageCmd packages={['@graphql-yoga/common graphql']} />
+<PackageCmd packages={['graphql-yoga graphql']} />
 
 ## Example
 
-### Create your GraphQL Endpoint
+### Create your graphql endpoint
 
-Create the following file:
+Create the file `src/routes/api/graphql.ts`:
 
 ```ts filename="src/routes/api/graphql.ts"
-import { createServer } from '@graphql-yoga/common'
+import { createYoga, createSchema } from 'graphql-yoga'
 import type { RequestEvent } from '@sveltejs/kit'
 
-const yogaApp = createServer<RequestEvent>({
-  schema: {
-    typeDefs: /* GraphQL */ `
-      type Query {
-        hello: String
-      }
-    `,
+const yogaApp = createYoga<RequestEvent>({
+  schema: createSchema({
+    typeDefs: `
+			type Query {
+				hello: String
+			}
+		`,
     resolvers: {
       Query: {
         hello: () => 'SvelteKit - GraphQL Yoga'
       }
     }
-  },
-  graphiql: {
-    endpoint: '/api/graphql'
-  }
+  }),
+  // Needed to be defined explicitly because our endpoint lives at a different path other than `/graphql`
+  graphqlEndpoint: '/api/graphql'
 })
 
 export { yogaApp as get, yogaApp as post }
 ```
 
-<Callout>
-  Simple example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/sveltekit).
-</Callout>
+> **Simple example** on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/sveltekit).
 
-<Callout emoji="🪄">
-  More examples with our KitQL library [here](https://github.com/jycouet/kitql).
-  The best of all GraphQL ecosystem for SvelteKit.
-</Callout>
+> More examples with our **KitQL** library [here](https://github.com/jycouet/kitql). <br />
+> The best of all GraphQL ecosystem for SvelteKit.
