--- a/website/src/pages/v2/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/v2/integrations/integration-with-cloudflare-workers.mdx
@@ -1,4 +1,4 @@
-import { PackageCmd } from '@theguild/components'
+import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with Cloudflare Workers
 
@@ -6,51 +6,59 @@ GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily int
 
 [Cloudflare Workers](https://developers.cloudflare.com/workers) provides a serverless execution environment that allows you to create entirely new applications or augment existing ones without configuring or maintaining infrastructure.
 
-You will want to use the package `graphql-yoga` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects when building GraphQL powered Cloudflare Workers.
+You will want to use the package `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects when building GraphQL powered Cloudflare Workers.
 
-> Watch [Episode #48 of `graphql.wtf`](https://graphql.wtf/episodes/48-graphql-yoga-cloudflare-workers-kv) for a quick introduction to using GraphQL Yoga with Cloudflare Workers, and KV:
+<Callout>
+  Watch [Episode #48 of
+  `graphql.wtf`](https://graphql.wtf/episodes/48-graphql-yoga-cloudflare-workers-kv)
+  for a quick introduction to using GraphQL Yoga with Cloudflare Workers, and
+  KV:
+</Callout>
 
 <iframe
-  src="https://www.youtube.com/embed/xibiwSXMLsc"
+  src="https://youtube.com/embed/xibiwSXMLsc"
   title="Using GraphQL Yoga with Cloudflare Workers, and KV"
 />
 
 ## Installation
 
-<PackageCmd packages={['graphql', 'graphql-yoga']} />
+<PackageCmd packages={['@graphql-yoga/common graphql']} />
 
-## Example with regular `fetch` event listener
+## Example with Regular `fetch` Event Listener
 
 ```ts filename="listener.mjs"
-import { createYoga } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/common'
 
-const yoga = createYoga()
+const server = createServer()
 
-self.addEventListener('fetch', yoga)
+server.start()
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/service-worker)
+<Callout>
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/service-worker).
+</Callout>
 
 ## Example with Modules Approach
 
 ```ts filename="modules.mjs"
-import { createYoga } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/common'
 
-export default createYoga()
+export default createServer()
 ```
 
 ### Access to environmental values (KV Namespaces etc.)
 
-You can access your KV namespaces etc through the context.
+You can access your KV namespaces etc. through the context.
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/common'
 
 interface Env {
   MY_NAMESPACE: KVNamespace
 }
 
-const yoga = createYoga<Env>({
+export default createServer<Env>({
   typeDefs: /* GraphQL */ `
     type Query {
       todo(id: ID!): String
@@ -64,7 +72,7 @@ const yoga = createYoga<Env>({
   resolvers: {
     Query: {
       todo: (_, { id }, { MY_NAMESPACE }) => MY_NAMESPACE.get(id),
-      todos: (_, __, { MY_NAMESPACE }) => MY_NAMESPACE.list()
+      todos: (_, _2, { MY_NAMESPACE }) => MY_NAMESPACE.list()
     },
     Mutation: {
       // MY_NAMESPACE is available as a GraphQL context
@@ -77,20 +85,18 @@ const yoga = createYoga<Env>({
     }
   }
 })
-
-export default { fetch: yoga.handleRequest }
 ```
 
 If you need `ExecutionContext` as well inside your resolvers, you can set the `context` on your GraphQL server similar to what you see here:
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/common'
 
 interface Env {
   MY_NAMESPACE: KVNamespace
 }
 
-const yoga = createYoga<{ env: Env; ctx: ExecutionContext }>()
+const yoga = createServer<{ env: Env; ctx: ExecutionContext }>()
 
 export default {
   fetch(request: Request, env: Env, ctx: ExecutionContext) {
@@ -99,11 +105,14 @@ export default {
 }
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/cloudflare-modules)
+<Callout>
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/v2/examples/cloudflare-modules).
+</Callout>
 
 ## Enabling Subscriptions
 
-In order to enable Server Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below;
+To enable Server-Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below:
 
 ```toml
 compatibility_flags = ["streams_enable_constructors"]
